--- a/.github/workflows/multi-node-test-workflow.yml
+++ b/.github/workflows/multi-node-test-workflow.yml
@@ -28,6 +28,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Run integration tests with multi node config
         run: ./gradlew integTest -PnumNodes=5
+        env:
+          _JAVA_OPTIONS: -Xmx600M
       - name: Run Backwards Compatibility Tests
         run: |
           echo "Running backwards compatibility tests ..."
