Upgrade Guava version (#347)
Signed-off-by: Arpit Bandejiya <abandeji@amazon.com>
(cherry picked from commit 2d8a5897d2bdaed060f266940286147d1116baa4)

--- a/build.gradle
+++ b/build.gradle
@@ -60,8 +60,8 @@ apply plugin: 'opensearch.rest-test'
 
 
 checkstyle {
-    toolVersion = '8.29'
-    configFile file("checkstyle/checkstyle.xml")
+    toolVersion "10.3.3"
+    configDirectory.set(rootProject.file("checkstyle/"))
 }
 
 def usingRemoteCluster = System.properties.containsKey('tests.rest.cluster') || System.properties.containsKey('tests.cluster')
@@ -99,7 +99,7 @@ dependencies {
     compile "org.opensearch:common-utils:${common_utils_version}"
     configurations.all {
         resolutionStrategy {
-            force "com.puppycrawl.tools:checkstyle:${project.checkstyle.toolVersion}"
+            force "com.google.guava:guava:32.1.1-jre"
         }
     }
 }
