--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,84 +63,90 @@ jobs:
           path: ${{ steps.step-build-test-linux.outputs.build-test-linux }}
           if-no-files-found: error
 
-#  linux-test-docker:
-#    needs: linux-build
-#    strategy:
-#      matrix:
-#        java:
-#          - 11
-#          - 17
-#    # Job name
-#    name: Build Asynchronous Search
-#    # This job runs on Linux.
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Pull and Run Docker for security tests
-#        run: |
-#          version=`./gradlew properties -q | grep "opensearch_version:" | awk '{print $2}'`
-#          IFS='-' read -r -a version_array <<< "$version"
-#          plugin_version="${version_array[0]}.0"; for entry in ${version_array[@]:1}; do plugin_version+="-$entry"; done
-#          docker_version="${version_array[0]}-${version_array[1]}"
-#
-#          echo version $version
-#          echo plugin_version $plugin_version
-#          echo docker_version $docker_version
-#
-#          pwd=`pwd`
-#          echo $pwd
-#          cd ..
-#          pwd1=`pwd`
-#          echo $pwd1
-#          list_of_all_files=`ls asynchronous-search/build/distributions/`
-#          echo "listing distributions"
-#          echo $list_of_all_files
-#
-#          if docker pull opensearchstaging/opensearch:$docker_version
-#          then
-#            echo "FROM opensearchstaging/opensearch:$docker_version" >> Dockerfile
-#            echo "RUN if [ -d /usr/share/opensearch/plugins/opensearch-asynchronous-search ]; then /usr/share/opensearch/bin/opensearch-plugin remove opensearch-asynchronous-search; fi" >> Dockerfile
-#            echo "ADD asynchronous-search/build/distributions/opensearch-asynchronous-search-$plugin_version.zip /tmp/" >> Dockerfile
-#            echo "RUN /usr/share/opensearch/bin/opensearch-plugin install --batch file:/tmp/opensearch-asynchronous-search-$plugin_version.zip" >> Dockerfile
-#            docker build -t opensearch-asynchronous-search:test .
-#            echo "imagePresent=true" >> $GITHUB_ENV
-#          else
-#            echo "imagePresent=false" >> $GITHUB_ENV
-#          fi
-#      - name: Run Docker Image
-#        if: env.imagePresent == 'true'
-#        run: |
-#          cd ..
-#          docker run -p 9200:9200 -d -p 9600:9600 -e "discovery.type=single-node" opensearch-asynchronous-search:test
-#          sleep 90
-#      - name: Run Asynchronous Search Test
-#        if: env.imagePresent == 'true'
-#        run: |
-#          security=`curl -XGET https://localhost:9200/_cat/plugins?v -u admin:admin --insecure |grep opensearch-security|wc -l`
-#          if [ $security -gt 0 ]
-#          then
-#            echo "Security plugin is available"
-#            ./gradlew integTest -Dtests.rest.cluster=localhost:9200 -Dtests.cluster=localhost:9200 -Dtests.clustername="docker-cluster" -Dhttps=true -Duser=admin -Dpassword=admin
-#          else
-#            echo "Security plugin is NOT available"
-#            ./gradlew integTest -Dtests.rest.cluster=localhost:9200 -Dtests.cluster=localhost:9200 -Dtests.clustername="docker-cluster"
-#          fi
-#      - name: Upload failed logs
-#        uses: actions/upload-artifact@v2
-#        if: failure()
-#        with:
-#          name: logs
-#          path: build/testclusters/integTest-*/logs/*
-#      - name: Create Artifact Path
-#        run: |
-#          mkdir -p asynchronous-search-artifacts
-#          cp ./build/distributions/*.zip asynchronous-search-artifacts     
-#      # This step uses the upload-artifact Github action: https://github.com/actions/upload-artifact
-#      - name: Upload Artifacts
-#        uses: actions/upload-artifact@v1
-#        with:
-#          name: asynchronous-search-plugin-ubuntu
-#          path: asynchronous-search-artifacts
-#
+  linux-test-docker:
+    needs: linux-build
+    strategy:
+      matrix:
+        java:
+          - 11
+          - 17
+    # Job name
+    name: Test Asynchronous Search with opensearchstaging docker
+    # This job runs on Linux.
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Branch
+        uses: actions/checkout@v2
+      - uses: actions/download-artifact@v3
+        with:
+          name: async-plugin-linux-${{ matrix.java }}
+      - name: Pull and Run Docker for security tests
+        run: |
+          plugin=${{ needs.linux-build.outputs.build-test-linux }}
+          version=`echo $plugin|awk -F- '{print $3}'| cut -d. -f 1-3`
+          plugin_version=`echo $plugin|awk -F- '{print $3}'| cut -d. -f 1-4`
+          qualifier=`echo $plugin|awk -F- '{print $4}'| cut -d. -f 1-1`
+
+          if [ -n "$qualifier" ] && [ "$qualifier" != "SNAPSHOT" ]; then
+              qualifier=-${qualifier}
+          else
+              qualifier=""
+          fi
+
+          docker_version=$version$qualifier
+
+
+          echo plugin version plugin_version qualifier docker_version
+          echo "($plugin) ($version) ($plugin_version) ($qualifier) ($docker_version)"
+
+          pwd && ls -l ./$plugin
+
+          if docker pull opensearchstaging/opensearch:$docker_version
+          then
+            echo "FROM opensearchstaging/opensearch:$docker_version" >> Dockerfile
+            echo "RUN if [ -d /usr/share/opensearch/plugins/opensearch-asynchronous-search ]; then /usr/share/opensearch/bin/opensearch-plugin remove opensearch-asynchronous-search; fi" >> Dockerfile
+            echo "ADD $plugin /tmp/" >> Dockerfile
+            echo "RUN /usr/share/opensearch/bin/opensearch-plugin install --batch file:/tmp/$plugin" >> Dockerfile
+            docker build -t opensearch-asynchronous-search:test .
+            echo "imagePresent=true" >> $GITHUB_ENV
+          else
+            echo "imagePresent=false" >> $GITHUB_ENV
+          fi
+      - name: Run Docker Image
+        if: env.imagePresent == 'true'
+        run: |
+          cd ..
+          docker run -p 9200:9200 -d -p 9600:9600 -e "discovery.type=single-node" opensearch-asynchronous-search:test
+          sleep 90
+      - name: Run Asynchronous Search Test
+        if: env.imagePresent == 'true'
+        run: |
+          security=`curl -XGET https://localhost:9200/_cat/plugins?v -u admin:admin --insecure |grep opensearch-security|wc -l`
+          if [ $security -gt 0 ]
+          then
+            echo "Security plugin is available"
+            ./gradlew integTest -Dtests.rest.cluster=localhost:9200 -Dtests.cluster=localhost:9200 -Dtests.clustername="docker-cluster" -Dhttps=true -Duser=admin -Dpassword=admin
+          else
+            echo "Security plugin is NOT available"
+            ./gradlew integTest -Dtests.rest.cluster=localhost:9200 -Dtests.cluster=localhost:9200 -Dtests.clustername="docker-cluster"
+          fi
+      - name: Upload failed logs
+        uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: logs
+          path: build/testclusters/integTest-*/logs/*
+      - name: Create Artifact Path
+        run: |
+          mkdir -p asynchronous-search-artifacts
+          cp ./build/distributions/*.zip asynchronous-search-artifacts     
+      # This step uses the upload-artifact Github action: https://github.com/actions/upload-artifact
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v1
+        with:
+          name: asynchronous-search-plugin-ubuntu
+          path: asynchronous-search-artifacts
+
 #  windows-build:
 #    # Job name
 #    name: Build Asynchronous Search
