--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,16 +47,15 @@ jobs:
         id: step-build-test-linux
         run: |
           chown -R 1000:1000 `pwd`
-          su `id -un 1000` -c "./gradlew assemble"
+          su `id -un 1000` -c "./gradlew build"
           plugin=`basename $(ls build/distributions/*.zip)`
           echo plugin $plugin
           mv -v build/distributions/$plugin ./
           echo "build-test-linux=$plugin" >> $GITHUB_OUTPUT
-        #run: ./gradlew build
-#      - name: Uploads coverage
-#        uses: codecov/codecov-action@v1.2.1
-#        with:
-#          token: ${{ secrets.CODECOV_TOKEN }}
+      - name: Uploads coverage
+        uses: codecov/codecov-action@v1.2.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
       - uses: actions/upload-artifact@v3
         with:
           name: async-plugin-linux-${{ matrix.java }}
@@ -137,60 +136,60 @@ jobs:
           name: logs
           path: build/testclusters/integTest-*/logs/*
 
-#  windows-build:
-#    # Job name
-#    name: Build Asynchronous Search
-#    # This job runs on Windows.
-#    runs-on: windows-latest
-#    steps:
-#      # This step uses the setup-java Github action: https://github.com/actions/setup-java
-#      - name: Set Up JDK 11
-#        uses: actions/setup-java@v1
-#        with:
-#          java-version: 11
-#      # This step uses the checkout Github action: https://github.com/actions/checkout
-#      - name: Checkout Branch
-#        uses: actions/checkout@v2
-#      - name: Build with Gradle
-#        run: ./gradlew.bat build -x integTest -x jacocoTestReport
-#        env:
-#          _JAVA_OPTIONS: -Xmx4096M
-#      - name: Create Artifact Path
-#        run: |
-#          mkdir -p asynchronous-search-artifacts
-#          cp ./build/distributions/*.zip asynchronous-search-artifacts
-#      # This step uses the upload-artifact Github action: https://github.com/actions/upload-artifact
-#      - name: Upload Artifacts
-#        uses: actions/upload-artifact@v1
-#        with:
-#          name: asynchronous-search-plugin-windows
-#          path: asynchronous-search-artifacts
-#
-#  mac-os-build:
-#    # Job name
-#    name: Build Asynchronous Search
-#    # This job runs on Mac OS.
-#    runs-on: macos-latest
-#    steps:
-#      # This step uses the setup-java Github action: https://github.com/actions/setup-java
-#      - name: Set Up JDK 11
-#        uses: actions/setup-java@v1
-#        with:
-#          java-version: 11
-#      # This step uses the checkout Github action: https://github.com/actions/checkout
-#      - name: Checkout Branch
-#        uses: actions/checkout@v2
-#      - name: Build with Gradle
-#        run: ./gradlew build -x integTest -x jacocoTestReport
-#        env:
-#          _JAVA_OPTIONS: -Xmx4096M
-#      - name: Create Artifact Path
-#        run: |
-#          mkdir -p asynchronous-search-artifacts
-#          cp ./build/distributions/*.zip asynchronous-search-artifacts
-#      # This step uses the upload-artifact Github action: https://github.com/actions/upload-artifact
-#      - name: Upload Artifacts
-#        uses: actions/upload-artifact@v1
-#        with:
-#          name: asynchronous-search-plugin-mac
-#          path: asynchronous-search-artifacts
+  windows-build:
+    # Job name
+    name: Build Asynchronous Search
+    # This job runs on Windows.
+    runs-on: windows-latest
+    steps:
+      # This step uses the setup-java Github action: https://github.com/actions/setup-java
+      - name: Set Up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      # This step uses the checkout Github action: https://github.com/actions/checkout
+      - name: Checkout Branch
+        uses: actions/checkout@v2
+      - name: Build with Gradle
+        run: ./gradlew.bat build -x integTest -x jacocoTestReport
+        env:
+          _JAVA_OPTIONS: -Xmx4096M
+      - name: Create Artifact Path
+        run: |
+          mkdir -p asynchronous-search-artifacts
+          cp ./build/distributions/*.zip asynchronous-search-artifacts
+      # This step uses the upload-artifact Github action: https://github.com/actions/upload-artifact
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v1
+        with:
+          name: asynchronous-search-plugin-windows
+          path: asynchronous-search-artifacts
+
+  mac-os-build:
+    # Job name
+    name: Build Asynchronous Search
+    # This job runs on Mac OS.
+    runs-on: macos-latest
+    steps:
+      # This step uses the setup-java Github action: https://github.com/actions/setup-java
+      - name: Set Up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      # This step uses the checkout Github action: https://github.com/actions/checkout
+      - name: Checkout Branch
+        uses: actions/checkout@v2
+      - name: Build with Gradle
+        run: ./gradlew build -x integTest -x jacocoTestReport
+        env:
+          _JAVA_OPTIONS: -Xmx4096M
+      - name: Create Artifact Path
+        run: |
+          mkdir -p asynchronous-search-artifacts
+          cp ./build/distributions/*.zip asynchronous-search-artifacts
+      # This step uses the upload-artifact Github action: https://github.com/actions/upload-artifact
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v1
+        with:
+          name: asynchronous-search-plugin-mac
+          path: asynchronous-search-artifacts
