--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 # This should match with the users in MAINTAINERS.md file
-*   @Bukhtawar @bharath-techie @Arpit-Bandejiya @dhruv16dhr @pranikum
+*   @Bukhtawar @bharath-techie @Arpit-Bandejiya @dhruv16dhr @pranikum @mch2 @anddross @Poojita-Raj @kotwanikunal @Rishikesh1159
