--- a/.github/workflows/multi-node-test-workflow.yml
+++ b/.github/workflows/multi-node-test-workflow.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           echo "Running backwards compatibility tests ..."
           chown -R 1000:1000 `pwd`
-          su `id -un 1000` -c "./gradlew bwcTestSuite -Dtests.security.manager=false -PcustomDistributionDownloadType=bundle"
+          su `id -un 1000` -c "./gradlew bwcTestSuite -Dtests.security.manager=false"
       - name: Upload failed logs
         uses: actions/upload-artifact@v2
         if: failure()
