Check disk space
Signed-off-by: Finn Carroll <carrofin@amazon.com>

--- a/.github/workflows/multi-node-test-workflow.yml
+++ b/.github/workflows/multi-node-test-workflow.yml
@@ -53,6 +53,10 @@ jobs:
         run: |
           chown -R 1000:1000 `pwd`
           su `id -un 1000` -c "./gradlew integTest -PnumNodes=5"
+      - name: Check Disk Space
+        run: |
+          df -h
+          du -sh /
       - name: Run Backwards Compatibility Tests
         run: |
           echo "Running backwards compatibility tests ..."
