Update upload artifacts
Signed-off-by: Peter Zhu <zhujiaxi@amazon.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -138,7 +138,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: failure()
         with:
-          name: logs
+          name: linux-test-docker-logs-${{ matrix.java }}
           path: build/testclusters/integTest-*/logs/*
 
   windows-build:
