--- a/.github/workflows/multi-node-test-workflow.yml
+++ b/.github/workflows/multi-node-test-workflow.yml
@@ -56,5 +56,5 @@ jobs:
         uses: actions/upload-artifact@v4
         if: failure()
         with:
-          name: logs
+          name: multi-test-linux-${{ matrix.java }}
           path: build/testclusters/integTest-*/logs/*
