Update main branch for 3.0.0.0-alpha1 / gradle 8.10.2 / JDK23 (#698)
* Update main branch for 3.0.0-alpha1

Signed-off-by: Andrew Ross <andrross@amazon.com>

* Bump gradle 8.10.2 / JDK23 / fix qualifier

Signed-off-by: Peter Zhu <zhujiaxi@amazon.com>

* Resolve imports updates

Signed-off-by: Peter Zhu <zhujiaxi@amazon.com>

* More imports update

Signed-off-by: Peter Zhu <zhujiaxi@amazon.com>

* Add missing space

Signed-off-by: Peter Zhu <zhujiaxi@amazon.com>

* Update upload artifacts

Signed-off-by: Peter Zhu <zhujiaxi@amazon.com>

* Update upload artifacts

Signed-off-by: Peter Zhu <zhujiaxi@amazon.com>

* Resolve bwc tests

Signed-off-by: Peter Zhu <zhujiaxi@amazon.com>

---------

Signed-off-by: Andrew Ross <andrross@amazon.com>
Signed-off-by: Peter Zhu <zhujiaxi@amazon.com>
Co-authored-by: Peter Zhu <zhujiaxi@amazon.com>

--- a/.github/workflows/multi-node-test-workflow.yml
+++ b/.github/workflows/multi-node-test-workflow.yml
@@ -18,7 +18,7 @@ jobs:
   build:
     strategy:
       matrix:
-        java: [ 21 ]
+        java: [21, 23]
     needs: Get-CI-Image-Tag
     # Job name
     name: Build Asynchronous Search
@@ -56,5 +56,5 @@ jobs:
         uses: actions/upload-artifact@v4
         if: failure()
         with:
-          name: logs
+          name: multi-test-linux-${{ matrix.java }}
           path: build/testclusters/integTest-*/logs/*
