--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
   linux-build:
     strategy:
       matrix:
-        java: [ 21 ]
+        java: [21, 23]
     needs: Get-CI-Image-Tag
     # Job name
     name: Linux - Build Asynchronous Search
@@ -65,7 +65,7 @@ jobs:
   linux-test-docker:
     strategy:
       matrix:
-        java: [ 21 ]
+        java: [21]
     needs: linux-build
     # Job name
     name: Test Asynchronous Search with opensearchstaging docker
@@ -138,13 +138,13 @@ jobs:
         uses: actions/upload-artifact@v4
         if: failure()
         with:
-          name: logs
+          name: linux-test-docker-logs-${{ matrix.java }}
           path: build/testclusters/integTest-*/logs/*
 
   windows-build:
     strategy:
       matrix:
-        java: [ 21 ]
+        java: [21, 23]
     # Job name
     name: Windows - Build Asynchronous Search
     # This job runs on Windows.
@@ -172,13 +172,13 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: asynchronous-search-plugin-windows
+          name: asynchronous-search-plugin-windows-${{ matrix.java }}
           path: asynchronous-search-artifacts
 
   mac-os-build:
     strategy:
       matrix:
-        java: [ 21 ]
+        java: [21, 23]
     # Job name
     name: MacOS - Build Asynchronous Search
     # This job runs on Mac OS.
@@ -206,5 +206,5 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: asynchronous-search-plugin-mac
+          name: asynchronous-search-plugin-mac-${{ matrix.java }}
           path: asynchronous-search-artifacts
