Using java-agent gradle plugin to phase off Security Manager in favor of Java-agent. (#720)
* Revert "Fix build due to phasing off SecurityManager usage in favor of Java Agent (#719)"

This reverts commit 33b7de3fcc31ff648110c8363a7050b7ecce9495.

Signed-off-by: Pranav Reddy <pranavrd@amazon.com>

* Using java-agent gradle plugin to phase off Security Manager in favor of Java-agent.

Signed-off-by: Pranav Reddy <pranavrd@amazon.com>

---------

Signed-off-by: Pranav Reddy <pranavrd@amazon.com>

--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,7 @@ apply plugin: 'opensearch.testclusters'
 apply plugin: 'opensearch.rest-test'
 apply plugin: 'opensearch.pluginzip'
 apply from: 'gradle/formatting.gradle'
+apply plugin: 'opensearch.java-agent'
 
 
 checkstyle {
@@ -106,29 +107,6 @@ java {
 allprojects {
     group 'org.opensearch'
     version = opensearch_build
-
-    configurations {
-        agent
-    }
-
-    dependencies {
-    }
-
-    task prepareAgent(type: Copy) {
-        from(configurations.agent)
-        into "$buildDir/agent"
-    }
-
-    dependencies {
-        agent "org.opensearch:opensearch-agent-bootstrap:${opensearch_version}"
-        agent "org.opensearch:opensearch-agent:${opensearch_version}"
-        agent "net.bytebuddy:byte-buddy:${versions.bytebuddy}"
-    }
-
-    tasks.withType(Test) {
-        dependsOn prepareAgent
-        jvmArgs += ["-javaagent:" + project.layout.buildDirectory.file("agent/opensearch-agent-${opensearch_version}.jar").get()]
-    }
 }
 
 publishing {
